--- a/src/components/Update/Update.scss
+++ b/src/components/Update/Update.scss
@@ -1,5 +1,37 @@
 textarea {
-    resize: none;
-    width: 20vw;
-    height: 20vh;
-  }
+	resize: none;
+	width: 20vw;
+	height: 20vh;
+}
+
+.update {
+	form {
+		margin-top: 10px;
+		input {
+			padding: 5px 10px;
+			width: 95%;
+		}
+		.update__btn {
+			display: flex;
+			gap: 15px;
+			margin-top: 10px;
+			.update__btn__submit {
+				background-color: rgb(50, 218, 50);
+				padding: 10px 15px;
+				border: none;
+				border-radius: 10px;
+				color: #fff;
+			}
+			.update__btn__cancel {
+				background-color: rgb(219, 37, 37);
+				padding: 10px 15px;
+				border: none;
+				border-radius: 10px;
+				color: #fff;
+			}
+		}
+		textarea {
+			width: 95%;
+		}
+	}
+}
