--- a/src/App.scss
+++ b/src/App.scss
@@ -18,9 +18,14 @@ body {
 	box-shadow: 3px 1px 10px 13px rgba(251, 250, 250, 0.382);
 	background-color: #fff;
 	height: 100vh;
+	width: 95vw;
 	// padding: 30px;
-	.app__inside {
-		width: 100%;
+	.app__left {
+		width: 15%;
+		min-width: 150px !important;
+	}
+	.app__right {
+		width: 85%;
 	}
 }
 
