--- a/src/components/Layout/Header/Header.scss
+++ b/src/components/Layout/Header/Header.scss
@@ -15,14 +15,59 @@ header {
 	.header__right {
 		display: flex;
 		gap: 20px;
+		align-items: center;
+
 		input {
 			padding: 5px 15px;
-			width: 250px;
+			width: 40%;
 			outline: none;
 		}
 		select {
 			padding: 5px;
 			outline: none;
+		}
+	}
+}
+
+@media (max-width: 850px) {
+	header {
+		.header__left {
+			padding: 5px 10px;
+			font-weight: 400;
+		}
+		.header__right {
+			gap: 10px;
+			input {
+				width: 150px;
+			}
+			select {
+				width: 100px;
+			}
+		}
+	}
+}
+
+@media (max-width: 630px) {
+	header {
+		flex-wrap: wrap;
+		.header__left {
+			width: 90%;
+			padding: 10px 20px;
+			font-size: 18px;
+			display: flex;
+			justify-content: center;
+		}
+
+		.header__right {
+			margin-top: 15px;
+			display: block;
+			input {
+				width: 90%;
+			}
+			select {
+				width: 90%;
+				margin-top: 15px;
+			}
 		}
 	}
 }
