--- a/src/App.scss
+++ b/src/App.scss
@@ -20,6 +20,8 @@ body {
 	height: 100vh;
 	// padding: 30px;
 	.app__inside {
+		overflow-y: scroll;
+		overflow-x: hidden;
 		width: 100%;
 	}
 }
@@ -27,4 +29,7 @@ body {
 .container {
 	margin: 0 auto;
 	width: 100vw;
+}
+button:active{
+	box-shadow: 2px 1px 20px rgb(74, 131, 206);
 }
